--- a/main.html
+++ b/main.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	
-
+	<div>
+		id="text"
+	</div>
 
     <script type="text/javascript" src="./script.js">
 </script>
