--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<div>
-		id=text
+	<div id="text">
+		<b>"Welcome to the world of web development"</b>
 	</div>
 
     <script type="text/javascript" src="./script.js">
