--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div id="text">
-		<b>"Welcome to the world of web development"</b>
+		<b>Welcome to the world of web development</b>
 	</div>
 
     <script type="text/javascript" src="./script.js">
